# qubership-apihub-traffic-analyzer

./: .gitignore  Dockerfile  README.md  build_docker_image.cmd  build_golang_binary.cmd
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: installation-notes.md  usage-scenario.md
docs/api/: interface.yaml
helm-templates/: README.md
helm-templates/local-k8s-quickstart/: README.md  quickstart.sh
helm-templates/qubership-apihub-traffic-analyzer/: Chart.yaml  README.md  values.yaml
qubership-apihub-traffic-analyzer/: Service.go  go.mod
qubership-apihub-traffic-analyzer/client/: apihub.go
qubership-apihub-traffic-analyzer/controllers/: web_interface.go
qubership-apihub-traffic-analyzer/db/: ConnectionProvider.go
qubership-apihub-traffic-analyzer/decoders/: BodyDecoder.go  FrameDecoder.go  PayloadType.go
qubership-apihub-traffic-analyzer/entities/: CaptureMetadata.go  HeaderItem.go  PacketHeader.go  ParsedPacket.go  ReportAffectedRef.go  ReportDataRow.go  ReportEntity.go  ReportServiceOperation.go  ReportStatus.go  ReportType.go  ServiceAddress.go  WebServiceConfig.go  db_migration.go
qubership-apihub-traffic-analyzer/exception/: ErrorCodes.go  README.md
qubership-apihub-traffic-analyzer/readers/: AddressReader.go  CaptureReader.go  MetadataReader.go
qubership-apihub-traffic-analyzer/repository/: HttpHeadersRepository.go  PacketsRepository.go  ReportDataRepository.go  ReportRepository.go  (+3 more)
sll_covert/: CMakeLists.txt  appConfig.cpp  appConfig.h  fileConverter.cpp  fileConverter.h  little_big.h  local_pcap.h  sll_convert.cpp
(+85 files in other folders)
